<resources>
    <string name="app_name">Poképal</string>
    <string name="refresh_pokemons">Refresh Pokémons</string>
    <string name="about">About</string>
    <string name="details">Details</string>
    <string name="base_stats">Base Stats</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="speed">Speed</string>
    <string name="sp_def">Sp. Def</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="sp_atk">Sp. Atk</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search by name or type</string>
    <string name="add_to_favorites">Add to Favorites</string>
</resources>